tests/snapshots/test_runner__tests__compiler__transpile__top_level_destructuring_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
# Error, cannot destructure Integer
do {
  let {x} = 2
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/transpile/top_level_destructuring_2.kk:3:7
  │
3 │   let {x} = 2
  │       ^^^ Type mismatch
  │
  = +---------------+---------------+
    | EXPECTED TYPE |  ACTUAL TYPE  |
    +---------------+---------------+
    | - Integer     | + {           |
    |               | +   x:        |
    |               | +     @TVAR0, |
    |               | + }           |
    +---------------+---------------+
